--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,22 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  provider_base_tools: ^0.1.6
   flutter_localizations:
     sdk: flutter
+  google_fonts: ^6.2.1
   intl: any
+  provider_base_tools: ^0.1.6
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
