--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   intl: any
   provider_base_tools: ^0.1.6
   smooth_page_indicator: ^1.2.0+3
+  marquee: ^2.3.0
+
 
 dev_dependencies:
   flutter_lints: ^4.0.0
