--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
- 
+  shimmer: ^3.0.0
   chip_list: ^3.1.0
   chips_choice: ^3.0.1
   chips_choice_null_safety: ^2.0.6
